2001-02-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLocale.m: Tidy, defined __USE_GNU to get YESSTR and NOSTR
	on later versions of glibc.
	* Source/NSString.m: Log more info when parsing a property list fails.

2001-02-13  Adam Fedor  <fedor@gnu.org>

	* Version: 0.9.1

	* configure.in: Fix test for stdint.h

2001-02-11  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSXML.m: testing lib!=NULL and string!=NULL before doing something in 
                -GSXMLNode content
                -GSXMLNode name
                -GSXMLNode ns
                -GSXMLNode nsDef
	* NSString.m: handle NULL bytes in -initWithUTF8String:
	(Treat it as zero length string and NSDebugMLog a warning).

2001-02-09  Jonathan Gapen  <jagapen@home.com>

	More FreeBSD build fixes:
	* acconfig.h: Add recent definitions.
	* configure.in: Add test for wchar.h header.
	* configure: Regenerate.
	* Headers/gnustep/base/config.h.in: Regenerate.
	* Source/GSFormat.m: Typedef wint_t if wchar.h not available.
	* Source/NSTask.m: Change #if TIOCNOTTY to #ifdef TIOCNOTTY.

2001-02-08  Nicola Pero  <n.pero@mi.flashnet.it>

	* INSTALL: Updated installation instructions.

2001-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	Fixes reported by David Wetzel ...
	* Source/GSFormat.h: Add header for wchar
	* Source/NSCoder.m: Remove spurious semicolon
	* Source/dynamic-load.h: correct argument to dlsym()

2001-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: permit nil string when replacing characters
	in range.  Treat as an empty string rather than raising exception.

2001-02-07  Jonathan Gapen  <jagapen@home.com>

	* Source/NSFileManager.m: Make disk space report work on FreeBSD.
	On all Unix platforms, report disk space available to non-root users.

2001-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: merged in some more fixes by Kai.

2001-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: Fixed error in PAD() macro - it was failing to