@@ -1,3 +1,7 @@
+2001-02-20  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* Source/GSXML.m|.h ([GSXMLAttribute -ns]): get attribute namespace.
+
 2001-02-19  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSLocale.m: Tidy, defined __USE_GNU to get YESSTR and NOSTR
